--- a/src/app/dashboard/activity/page.module.css
+++ b/src/app/dashboard/activity/page.module.css
@@ -1,18 +1,8 @@
 .container {
   display: flex;
-  align-items: center; /* Centrer les éléments horizontalement */
-  width: 80%; /* Définir une largeur pour le conteneur principal */
-  margin: 0 auto; /* Centrer le conteneur horizontalement */
-  padding: 20px; /* Ajouter un espace interne au conteneur */
+  margin: 0 10px 0 0; /* Centrer le conteneur horizontalement */
 }
 
-
-.sideMenu {
-  width: 250px; /* Largeur du SideMenu */
-  height: 100vh; /* Hauteur du SideMenu (100% de la hauteur de la fenêtre) */
-  background-color: #f2f2f2; /* Couleur d'arrière-plan du SideMenu */
-  padding: 20px;
-}
 
 .formContainer {
   flex: 1; /* Prendre tout l'espace restant dans le conteneur principal */
