--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,14 +14,18 @@ a {
     text-decoration: none;
     color: inherit;
 }
-.theme{
+
+/* Thèmes */
+.theme {
     transition: 1s all ease;
 }
-.light{
+
+.light {
     background-color: whitesmoke;
     color: #111;
 }
-.dark{
+
+.dark {
     background-color: #111;
     color: #bbb;
 }
@@ -35,16 +39,23 @@ a {
     flex-direction: column;
     justify-content: space-between;
 }
+
+/* Variables CSS */
 :root {
-    --primary-color: #007bff;
+    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    --transition-duration: 0.3s;
+    --primary-color: #1523bc;
     --primary-hover-color: #0056b3;
+    --secondary-color: #f5f5f5;
+    --background-color: #fff;
+    --text-color: #201b1b;
+    --heading-color: #0e0505;
     --border-color: #ddd;
     --input-border-color: #ccc;
-    --background-color: #fff;
-    --text-color: #6c757d;
     --font-size: 12px;
     --padding: 10px;
-    --border-radius: 5px;
+    --border-radius: 8px;
     --gap: 15px;
     --transition-duration: 0.3s;
-  }
+    --hover-box-shadow: rgba(198, 21, 21, 0.2);
+}
